# MoscowMetr-

./: .env.example  .gitignore  Dockerfile.postgres  README.md  docker-compose.yml  init-restore.sh
.github/workflows/: deploy.yml
api-service/: .coverage  .coverage.claude.pid6.XuwVCjpx.HsDaCZqYxaJh  Dockerfile  alembic.ini  main.py  pyproject.toml
api-service/alembic/: env.py
api-service/alembic/versions/: 0001_initial.py  0002_refresh_tokens.py  0003_drop_refresh_tokens_table.py  0004_add_is_verified.py
api-service/app/: config.py  logger.py
api-service/app/auth/: dependencies.py  jwt.py
api-service/app/db/: redis.py
api-service/app/models/: __init__.py  prediction_log.py  refresh_token.py  user.py
api-service/app/routers/: admin.py  auth.py  listings.py  predict.py  stats.py
api-service/app/services/: email.py
api-service/data/: listings.parquet  metrics.json
api-service/tests/: conftest.py  test_auth.py  test_health.py  test_jwt.py  test_passwords.py  test_schemas.py
data/: listings.parquet
frontend/: Dockerfile  api_client.py  app.py  components.py  requirements.txt  styles.py
frontend/.streamlit/: config.toml
frontend/pages/: 1_Predict.py  2_History.py  3_Listings.py  4_Stats.py  5_Admin.py
ml/: predict.py  train.py
ml-service/: Dockerfile  main.py  predictor.py  requirements.txt  schemas.py
ml-service/artifacts/: metrics.json  model.cbm  moscow_okrugs.geojson
nginx/: nginx.conf  start.sh
nginx/conf.d/: reval.conf
notebooks/: eda.ipynb
scripts/: download_okrugs.py  explore_data.py  export_to_parquet.py  fill_okrug.py  init-ssl.sh
