[project]
name = "reVal-api"
version = "1.0.0"
description = "ReVal — API Service. Бизнес-логика, авторизация, ролевая модель."
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",
    "asyncpg==0.30.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "httpx==0.27.2",
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "python-multipart==0.0.12",
    "loguru==0.7.2",
    "redis[asyncio]==5.2.1",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "httpx==0.27.2",
]
